abcegradingsystem setup complete

--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-
-DB = 'kuceportal'
-USER = 'root'
-PASSWORD = ''
-HOST = 'localhost'
-
-USER_NAME='Dekay27'
+DB=kuceportal
+USER=root
+HOST=localhost
+USER_NAME=Dekay27
 
